--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "server.js",   
-      "use": "@vercel/node"            
+      "src": "backend/package.json",   
+      "use": "@vercel/node"             
     }
   ],
   "routes": [
     {
       "src": "/(.*)",                   
-      "dest": "server.js"               
+      "dest": "backend/$1"              
     }
   ]
 }
